# MyTiger

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
Markdown/: Tiger 1.5 to Huawei API.md
api/include/: api.h  cad.h  curve.h  mesh.h
api/src/: cad.cpp  curve.cpp  mesh.cpp
build_win/: CMakePresets.json  cgns-Target-debug.cmake  cgns-config-version.cmake  cgns-config.cmake  cgns-debug-x86_64-data.cmake  cgnsTargets.cmake  conan_toolchain.cmake  conandeps_legacy.cmake  conanrunenv-debug-x86_64.bat  libtiger-Target-debug.cmake  libtiger-config-version.cmake  libtiger-config.cmake  libtiger-debug-x86_64-data.cmake  libtigerTargets.cmake  opencascade-Target-debug.cmake  opencascade-config-version.cmake  opencascade-config.cmake  opencascade-debug-x86_64-data.cmake  opencascadeTargets.cmake
cmake/: AFT_Tri.cmake  ALM_Hybrid.cmake  Autogrid_Triangle.cmake  DT_Remesh.cmake  DT_Tetra.cmake  DT_Tri.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  Extrude_Struct.cmake  Generate_Line.cmake  Mesh_Repair.cmake  OpenCasCadeConfig.cmake  Quality_Data.cmake  REMesh_Triangle.cmake  SizingFunc.cmake  TRANS2_Geo.cmake  add_extern.cmake  add_internal_module.cmake  add_module.cmake  build_geogram.cmake  cgns_write.cmake  conan_config.cmake  conan_profile_linux_release  conan_profile_win64_debug  conan_profile_win64_release  conanfile.py  extern.cmake  test_aft_tri.cmake  test_api.cmake  test_dt_remesh.cmake  tigerdemo_AutoGrid.cmake  tigerdemo_legacy.cmake  tigerdemo_legacy2.cmake  turbomachinery.cmake  update_submodule.cmake
cmake/conan_upload/: conanbuild.sh  conanbuildenv-x86_64.sh  conanfile.py  conanrun.sh  conanrunenv-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  upload.sh
cmake/conan_upload_win/: conanfile.py  upload_win.bat  upload_win.ps1
doc/Markdown/: Tiger 1.5 to Huawei API.md
include/: alias.h  autogrid.h  autogrid_parameters.h  autogrid_plug.h  boundary_layer_mesh.h  boundary_layer_mesh_parameters.h  common.h  definitions.h  discrete_geometry_repair.h  discrete_geometry_repair_parameters.h  discrete_geometry_struct.h  discretize_curve.h  discretize_curve_parameters.h  discretize_surface.h  discretize_surface_STL.h  discretize_surface_delaunay.h  discretize_surface_delaunay_parameters.h  discretize_surface_parameters.h  discretize_surface_remesh.h  discretize_surface_remesh_parameters.h  distributed_paralle_refine.h  exception.hpp  extrude.h  geometry_curve_interface.h  geometry_data_struct.h  geometry_interface.h  geometry_interface_occ.h  geometry_interface_parameters.h  geometry_surface_interface.h  mesh_data_struct.h  mesh_quality.h  polygonal_mesh.h  sizing_field_interface.h  sizing_field_parameters.h  structure_mesh.h  tetrahedral_mesh.h  tetrahedral_mesh_parameters.h  tiger.h  tiger_parameters.h
script/: allUpload.ps1  centos_before_build.sh  centos_build.sh  change_to_spdlog.py  change_to_spdlog_check.py  conanfile.py  linux_before_build.sh  linux_build.sh  linux_build_run.sh  linux_test.sh  upload.sh  win_after_build.ps1  win_after_build_copy_testapi.bat  win_before_build.bat  win_build.bat
src/module/AFT_Tri/: AFT_triangle_mesh.cpp
src/module/ALM_Hybrid/: boundary_layer_mesh.cpp
src/module/Autogrid_Triangle/: autogrid.cpp
src/module/DT_Tetra/: dt_mesh.cpp
src/module/DT_Tri/: dt_2D.cpp
test/: test_AFT_Tri.cpp  test_ALM_Hybrid.cpp  test_AutoGrid.cpp  test_Autogrid_Triangle.cpp  test_CGNS_Write.cpp  test_DT_Tetra.cpp  test_DT_Tri.cpp  test_Extrude_Struct.cpp  test_Generate_Line.cpp  test_Mesh_Repair.cpp  test_Quality_Data.cpp  test_REMesh_Triangle.cpp  test_SizingFunc.cpp  test_TRANS2_Geo.cpp  test_api.cpp  test_api.h  test_dt_remesh.cpp  test_geo.cpp  test_legacy.cpp  test_legacy2.cpp  test_turbomachinery.cpp
tools/: Pyramid_surface.cpp  Pyramid_surface.h  add_source.hpp  cgnsWrite.cpp  cgnsWrite.h  facet_classfication.hpp  geometry_interface_plane.cpp  geometry_interface_plane.h  geometry_intersection.cpp  geometry_intersection.h  kdtree.c  kdtree.h  kdtree.hpp  list_to_matrix.hpp  matrix_to_list.hpp  merge_surface_mesh.hpp  merge_volume_mesh.hpp  meshIO.cpp  meshIO.h  mesh_repair.cpp  mesh_repair.h  output_info.hpp  pair_hash.h  predicates.cpp  predicates.h  surface_from_volume.hpp
(+7 files in other folders)
